styles/app.css
@import url("./vendors/styles/font-awesome.min.css");

* {
  box-sizing: border-box;
}

.close {
  position: absolute;
  right: 20px;
  top: 20px;
  font-family: FontAwesome;
  cursor: pointer;
}

.close:before {
  content: '\f00d';
}

.loading {
  cursor: progress;
}


body {
  background: white;
  font-family: helvetica, arial;
  margin: 0px;
  /*height: 100%;*/
}

.splash {
  width: 100vw;
  height: 100vh;
  background: #8073B1;
}

.splash img {
  position: absolute;
  height: 100%;
  right: 0;
  bottom: 0;
}

.splash h1  {
  position: absolute;
  top: 10%;
  left: 5%;
  margin-right: 5%;
}

[role="application"] {
  width: 100vw;
  height: 100vh;
  /*! position: relative; */

  display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: row;
	flex-direction: row;
}

.message {
  display: block;
  position: fixed;
  width: 100vw;
  /*background: rgb(80, 190, 135);*/
}

.message .close {
  position: unset;
  margin-left: 10px;
}

.message ul {
  margin: 0;
  list-style: none;
  padding: 0;
}

.message li {
  padding: 5px;
  color: white;
  background: rgb(75, 180, 230);
  text-align: center;
}

.message li.error {
  background: rgb(145, 100, 205);
  color: black;
  /*color: rgb(255,102,0);*/
  font-weight: bold;
}


.drawer {
  background-color: black;
  position: relative;
}

.drawer[aria-expanded=false] {
  /*! flex-basis: 34px; */
  /*! flex-grow: 0; */
  width: 34px;
}

.drawer[aria-expanded=true] {
  flex-basis: 16.25rem;
}

.drawer button.toggle {
  position: absolute;
  bottom: 0px;
  left:0px;

  box-sizing: border-box;
  color: white;
  background: black;
  font-family: FontAwesome;
  border: none;
  border-top: solid 1px #666666;
  width: calc(100% - 14px);
  margin: 0 7px;
  font-size: 25px;
  text-align: right;
  line-height: 35px;
}
.drawer .tools {
  position: absolute;
  top: 42px;
  height: calc( 100% - 67);
  width: 100%;
  /*! z-index: 0; */
  display: none;
}

.drawer[aria-expanded=false] button:before {
  content: "\f0da";
}
.drawer[aria-expanded=true] button:before {
  content: "\f0d9";
}

.drawer .search {
  box-sizing: border-box;
  border-right: solid 1px #999999;
  width: 100%;
  overflow-x: hidden;
  /*! overflow-y:  visible; */

  /*! min-height: 42px; */
  background: white !important;
  padding-left: 34px;
  /*! z-index: 1000; */
}

.drawer .search:before {
  font-family: FontAwesome;
  /*content: '➕';*/
  content: "\f067";
  font-size: 25px;
  line-height: 42px;
  position: absolute;
  left:0px;
  padding: 0 5px;
  background: white;
  color: black;
  z-index: 1;

}

.drawer .search .submit {
  position: absolute;
  right: 0px;
  padding: 0 5px 0 0;
  top: 0px;
  line-height: 42px;
  font-size: 20px;
  color: #D6D6D6;
  cursor: pointer;
}
.drawer .search .submit:hover {
  color: #595959;
}



.drawer .search input {
  height: 42px;
  /*! line-height; */ 42px;
  border: none;
  font-size: 16px;
  background: white !important;
}

.drawer .search .tt-menu {
  position: unset !important;

}

.drawer .search pre {
  display: none;
}

.drawer .search .tt-suggestion.tt-selectable {
  line-height: 42px;
  cursor: pointer;
}
.drawer .search .tt-suggestion.tt-selectable.tt-cursor {
  text-decoration: underline;
  font-weight: 800;
}

.container {
  flex: 1;
  height: 100%;
  width:100%;
}

nav {
  height: 44px;
  background: #333333;
  width: 100%;
  position: relative;
}

nav button {
  position: absolute;
  left: 12px;
  top: 16px;
  background: url('../img/icon_menu.svg');
  border: none;
  width: 15px;
  height: 12px;
  padding: 0px;
  cursor: pointer;
}

nav h1 {
  margin: 0;
  color: white;
  font-size: 16px;
  position: absolute;
  height: 44px;
  line-height: 44px;
  left: 60px;
  /*font-weight: normal;*/
}

main {
  height:100%;
  overflow-x: hidden;
  overflow-y: auto;
  margin-left: 30px;
}

ul.movielibrary {
  padding: 0px;
  list-style: none;
}

ul.movielibrary > li {
  display: inline-block;
  padding: 10px;
  vertical-align: middle;
}

ul.movielibrary .movieitem {
  width: 134px;
  height: 200px;
  text-align: center;
  line-height: 100%;
  position: relative;
}

ul.movielibrary .movieitem .poster {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  line-height: 200px;
  display: inline-block;
}

ul.movielibrary .movieitem .poster img {
  vertical-align: middle;
  height: auto;
  width: auto;
  max-width: 100%;
  max-height: 100%;
  transition: opacity 0.25s;
}



ul.movielibrary .movieitem .placeholder {
  height: 100%;
  width: 100%;
  border: solid 1px #D6D6D6;
  vertical-align: middle;
  background: #D6D6D6;
  position: relative;
}

ul.movielibrary .movieitem .placeholder img {
  position: absolute;
  width: 80px;
  left: 50%;
  margin-left: -40px;
  bottom: 25px;
}

ul.movielibrary .movieitem .placeholder h3 {
  font-size: 16px;
  margin-left: 10px;
  margin-right: 10px;
  color: #595959;
}

.searchresults {
  position: relative;
}

.searchresults h2 {
  margin-top: 0;
  padding: 10px 10px 0;
}

.searchresults.loading .empty {
  display: none;
}

.details {
  /*! flex-basis: 660px; */
  height: auto;
  background: black;

  color: white;
  font-size: 15px;
  box-sizing: border-box;
  overflow-y: auto;
  position: relative;
  /*! height: 100%; */
  overflow-x: hidden;
}

.scrollcontainer {
  overflow: auto;

}

.details > div {
  padding: 30px;
  width: 660px;
}

.details .poster {
  height: 260px;
  float: left;
}

.details .movieabout h2 {
  margin-top: 0px;
  font-size: 21px;
}

.details .movieabout {
  height: 260px;
  padding-left:30px;
  overflow: hidden;
}

.details .movieabout .characteristics {
  margin: 20px 0px;
}

.details .movieabout .characteristics button {
  border: none;
  background: none;
  font-size: 15px;
  text-decoration: underline;
  cursor: pointer;

}

.details .movieabout .characteristics button#save {
  color: #FF6600;
}

.details .movieabout .characteristics button.delete {
  color: #D6D6D6;
}

.details hr {
  margin: 20px 0;
  position: relative;
  padding: 0;
  border: none;
  border-top: 1px solid white;
}

.details hr:before {
  content:"";
  position: absolute;
  left: 50%;
  padding-left: -5px;
  top: 0px;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-top: 10px solid white;
  border-right: 10px solid transparent;
}

.details hr:after {
  content:"";
  position: absolute;
  left:50%;
  padding-left: -5px;
  top: -2px;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-top: 10px solid black;
  border-right: 10px solid transparent;
}

.details .waitmessage {
  display: inline-block;
  text-align: right;
  color: #595959;
  font-weight: normal;
  float: right;
}

.details .waitmessage img {
  padding-left: 10px;
}

.details .soundtrack {
  /*padding-bottom: 100px;*/
}

.soundtrack h3 {
  font-size: 15px;
}

.soundtrack h3 .artist {
  color: #595959;
  font-weight: normal;
}

.album button.play {
  border: none;
  background: none;
  color: white;
  font-size: 15px;
  cursor: pointer;
}

.album button.play span {
  color: #D6D6D6;
  font-size: 80%;
}

.album .tracks li {
  position: relative;
  line-height: 2em;
  color: #666;
  width: 100%;
}

.album .tracks li .title {
  font-weight: bold;
  color: white;
};

.album .tracks li .length {
  position: absolute;
  right: 0px;
}

.details .player {
  /*position: absolute;
  bottom: 20px;
  */ /*! width: calc( 100% - 70px ); */
  /*! height: 90px; */
}

.details .player iframe {
  width: 100%;
  /*height: 100%; */
}

@media(min-width: 1201px) {
  nav {
    display: none;
  }
}

@media(max-width: 1200px) and (min-width: 992px) {
  nav {
    display: none;
  }
}
@media(max-width: 991px) and (min-width: 768px) {
  nav {
    display: none;
  }
  .details {
    position: absolute;
    top: 0px;
    left:0px;
  }
  .details > div {
    width: 100vw;
    height: 100vh;
  }
}
@media(max-width: 767px) {
  .drawer[aria-expanded=false] {
    display: none;
  }

  .drawer[aria-expanded=true] {
    flex-basis: 80%;
  }

  main {
    margin-left:0px;
    height: calc(100% - 44px);
  }

  .details {
    position: absolute;
    top: 0px;
    left:0px;
    font-size: 13px;
  }

  .details > div {
    width: 100vw;
    height: 100wh;
  }

  .details .poster {
    float: none;
    margin-bottom: 20px;
  }

  .details .movieabout {
    padding: 0;
  }

  .details .movieabout h2 {
    font-size: 16px;
  }
}

